--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -14,33 +14,68 @@ stages:
     #     knownHostsEntry: 'KNOWN_HOSTS_STRING'
     #     sshPublicKey: 'PUBLIC_KEY'
     #     sshKeySecureFile: 'id_rsa'
-    - task: ArchiveFiles@2
-      displayName: 'Archive FakeRestAPI'
+
+    - task: DownloadSecureFile@1
+      displayName: Download terraform.tfvars 
       inputs:
-        rootFolderOrFile: 'path/to/fakerestapi'
-        includeRootFolder: false
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId)-fakerestapi.zip'
-    - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)-fakerestapi.zip
-      displayName: 'Upload Package'
-      artifact: drop-fakerestapi
-- stage:
-  jobs:
-  - deployment: FakeRestAPI
-    pool:
-      vmImage: 'Ubuntu-16.04'
-    environment: 'TEST'
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - task: AzureWebApp@1
-            displayName: 'Deploy Azure Web App'
-            inputs:
-              azureSubscription: ''
-              appName: ''
-              appType: webApp
-              package: $(Pipeline.Workspace)/drop-fakerestapi/$(Build.BuildId)-fakerestapi.zip
+        secureFile: 'terraform.tfvars'
+
+    - task: Bash@3
+      displayName: Copy terraform.tfvars 
+      inputs:
+          targetType: 'inline'
+          script: cp $(Agent.TempDirectory)/terraform.tfvars $(System.DefaultWorkingDirectory)/terraform
+           
+    - task: TerraformInstaller@0
+      displayName: Install Terraform
+      inputs:
+          terraformVersion: 'v0.15.4'
+      
+    - task: TerraformTaskV2@2
+      displayName: "Terraform Init"
+      inputs:
+          provider: 'azurerm'
+          command: 'init'
+          backendServiceArm: 'Project3'
+          backendAzureRmResourceGroupName: 'project3'
+          backendAzureRmStorageAccountName: 'daxproj3tf'
+          backendAzureRmContainerName: 'terraform'
+          backendAzureRmKey: 'terraform.tfstate'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
+      
+    - task: TerraformTaskV2@2
+      inputs:
+          provider: 'azurerm'
+          command: 'validate'
+
+    
+#    - task: ArchiveFiles@2
+#      displayName: 'Archive FakeRestAPI'
+#      inputs:
+#        rootFolderOrFile: 'path/to/fakerestapi'
+#        includeRootFolder: false
+#        archiveType: 'zip'
+#        archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId)-fakerestapi.zip'
+#    - publish: $(Build.ArtifactStagingDirectory)/$(Build.BuildId)-fakerestapi.zip
+#      displayName: 'Upload Package'
+#      artifact: drop-fakerestapi
+#- stage:
+#  jobs:
+#  - deployment: FakeRestAPI
+#    pool:
+#      vmImage: 'Ubuntu-16.04'
+#    environment: 'TEST'
+#    strategy:
+#      runOnce:
+#        deploy:
+#          steps:
+#          - task: AzureWebApp@1
+ #           displayName: 'Deploy Azure Web App'
+ #           inputs:
+ #             azureSubscription: ''
+  #            appName: ''
+#              appType: webApp
+#              package: $(Pipeline.Workspace)/drop-fakerestapi/$(Build.BuildId)-fakerestapi.zip
   # - deployment: VMDeploy
   #   displayName: NAME
   #   environment:
