--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -53,7 +53,7 @@ stages:
         command: 'plan'
         commandOptions: |
           -auto-approve 
-        
+        environmentServiceNameAzureRM: 'Project3'
     
 #    - task: ArchiveFiles@2
 #      displayName: 'Archive FakeRestAPI'
