Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -2,9 +2,10 @@ name: Azure Pipelines
 variables:
   python.version: '3.7.6'
 stages:
-- stage: Infrastructure Provision
+- stage: provision_infrastructure
   jobs:
   - job:  provision_infrastructure
+    displayName: Provision Infrastructure
     pool:
       name: Hosted Ubuntu 1604
     steps:
