--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -44,7 +44,7 @@ stages:
     - task: TerraformTaskV2@2
       inputs:
         provider: 'azurerm'
-        command: 'plan'
+        command: 'apply'
         commandOptions: |
           -auto-approve 
         workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
