--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -50,6 +50,50 @@ stages:
         workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
         environmentServiceNameAzureRM: 'Project3'
 
+- stage: destroy_infrastructure
+  jobs:
+  - job:  destroy_infrastructure
+    displayName: Destroy Infrastructure
+    pool:
+      name: Hosted Ubuntu 1604
+    steps:
+    - task: DownloadSecureFile@1
+      displayName: Download terraform.tfvars 
+      inputs:
+        secureFile: 'terraform.tfvars'
+
+    - task: Bash@3
+      displayName: Copy terraform.tfvars 
+      inputs:
+          targetType: 'inline'
+          script: cp $(Agent.TempDirectory)/terraform.tfvars $(System.DefaultWorkingDirectory)/terraform
+           
+    - task: TerraformInstaller@0
+      displayName: Install Terraform
+      inputs:
+          terraformVersion: 'v0.15.4'
+      
+    - task: TerraformTaskV2@2
+      displayName: "Terraform Init"
+      inputs:
+          provider: 'azurerm'
+          command: 'init'
+          backendServiceArm: 'Project3'
+          backendAzureRmResourceGroupName: 'project3'
+          backendAzureRmStorageAccountName: 'daxproj3tf'
+          backendAzureRmContainerName: 'terraform'
+          backendAzureRmKey: 'terraform.tfstate'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
+      
+    - task: TerraformTaskV2@2
+      inputs:
+        provider: 'azurerm'
+        command: 'destroy'
+        commandOptions: |
+          -auto-approve 
+        workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
+        environmentServiceNameAzureRM: 'Project3'
+
 #- stage: Build
 #  jobs:
 # - job: Build
