--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -92,6 +92,36 @@ stages:
               appType: webApp
               package: $(Pipeline.Workspace)/drop-fakerestapi/$(Build.BuildId)-fakerestapi.zip
  
+- stage: Testing
+  jobs:
+  - job:  Testing
+    displayName: Testing
+    pool:
+      name: Hosted Ubuntu 1604
+    steps:
+    - task: JMeterInstaller@0
+      inputs:
+        jmeterVersion: '5.4.1'
+    - task: Bash@3
+      inputs:
+      targetType: 'inline'
+      script: 'jmeter -n -t automatedtesting/jmeter/StressTest.jmx -l log/jmeter/StressTest-result.csv -e -f -o log/jmeter/StressTest-html-report  -j log/jmeter/StressTest.log'
+   
+    - task: ArchiveFiles@2
+      inputs:
+      rootFolderOrFile: '$(Build.BinariesDirectory)/log/jmeter'
+      includeRootFolder: true
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/JmeterLogs.zip'
+      replaceExistingArchive: true
+
+    - task: PublishPipelineArtifact@1
+    inputs:
+    targetPath: '$(Pipeline.Workspace)/JmeterLogs.zip'
+    artifact: 'JmeterLogs'
+    publishLocation: 'pipeline'
+    
+        
 - stage: destroy_infrastructure
   jobs:
   - job:  destroy_infrastructure
