Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -107,7 +107,7 @@ stages:
       displayName: Run JMeter Stress Test
       inputs: 
       targetType: 'inline'
-      script: 'jmeter -n -t automatedtesting/jmeter/StressTest.jmx -l log/jmeter/StressTest-result.csv -e -f -o log/jmeter/StressTest-html-report  -j log/jmeter/StressTest.log'
+      script: ''
    
     - task: ArchiveFiles@2
       inputs:
