Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -102,9 +102,7 @@ stages:
     - task: JMeterInstaller@0
       inputs:
         jmeterVersion: '5.4.1'
-    - task: CmdLine@2
-      inputs:
-      script: 'jmeter -n -t automatedtesting/jmeter/StressTest.jmx -l log/jmeter/StressTest-result.csv -e -f -o log/jmeter/StressTest-html-report  -j log/jmeter/StressTest.log'
+    - bash: jmeter -n -t automatedtesting/jmeter/StressTest.jmx -l log/jmeter/StressTest-result.csv -e -f -o log/jmeter/StressTest-html-report  -j log/jmeter/StressTest.log
         
 - stage: destroy_infrastructure
   jobs:
