--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -103,7 +103,13 @@ stages:
       inputs:
         jmeterVersion: '5.4.1'
     - bash: jmeter -n -t automatedtesting/jmeter/StressTest.jmx -l log/jmeter/StressTest-result.csv -e -f -o log/jmeter/StressTest-html-report  -j log/jmeter/StressTest.log
-
+    - task: ArchiveFiles@2
+      inputs:
+      rootFolderOrFile: '$(Build.BinariesDirectory)/log/jmeter'
+      includeRootFolder: true
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/JmeterLogs.zip'
+      replaceExistingArchive: true
 - stage: destroy_infrastructure
   jobs:
   - job:  destroy_infrastructure
