Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -114,8 +114,8 @@ stages:
       
     - task: PublishPipelineArtifact@1
       inputs:
-        targetPath: '$(Pipeline.Workspace)/JmeterLogs.zip'
-        artifact: 'JmeterLogs'
+        targetPath: '$(Build.ArtifactStagingDirectory)/JMeterReport.zip'
+        artifact: 'JmeterReport'
         publishLocation: 'pipeline'
 
 - stage: destroy_infrastructure
