--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -91,8 +91,28 @@ stages:
               appName: 'DaxinDemoApp-AppService'
               appType: webApp
               package: $(Pipeline.Workspace)/drop-fakerestapi/$(Build.BuildId)-fakerestapi.zip
- 
-- stage: Testing
+
+
+- stage: : Regression Testing
+  jobs:
+  - job: Regression_Testing
+    displayName: Regression Testing
+    pool: 
+      name:Hosted Ubuntu 1604
+    steps:
+    - task: NodeTool@0
+      inputs:
+        versionSpec: '6.x'    
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: 'npm install -g newman'
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: 'newman run automatedtesting/postman/RegressionTest.json --reporters junit --reporter-junit-export  log/RegressionTest.xml'
+
+- stage: Performance Testing
   jobs:
   - job:  Testing
     displayName: Testing
