--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -110,7 +110,7 @@ stages:
     - task: Bash@3
       inputs:
         targetType: 'inline'
-        script: 'newman run automatedtesting/postman/RegressionTest.json --reporters junit --reporter-junit-export  RegressionTest.xml'
+        script: 'newman run automatedtesting/postman/RegressionTest.json  -e postman/Udacity_Project.postman_environment.json --reporters cli,junit --reporter-junit-export RegressionTests.xml'
         workingDirectory: '$(System.DefaultWorkingDirectory)'
     - task: PublishTestResults@2
       inputs:
