--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -19,7 +19,11 @@ stages:
       inputs:
           targetType: 'inline'
           script: cp $(Agent.TempDirectory)/terraform.tfvars $(System.DefaultWorkingDirectory)/terraform
-           
+    - task: InstallSSHKey@0
+      inputs:
+        knownHostsEntry: 'known_hosts'
+        sshKeySecureFile: 'id_rsa'
+      
     - task: TerraformInstaller@0
       displayName: Install Terraform
       inputs:
