Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -22,6 +22,7 @@ stages:
     - task: InstallSSHKey@0
       inputs:
         knownHostsEntry: 'known_hosts'
+        sshPublicKey: $(SSH-Public-Key)
         sshKeySecureFile: 'id_rsa.pub'
       
     - task: TerraformInstaller@0
