--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -24,7 +24,12 @@ stages:
         knownHostsEntry: 'known_hosts'
         sshPublicKey: $(SSH-Public-Key)
         sshKeySecureFile: 'id_rsa.pub'
-      
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          ls
+          cat id_rsa.pub
     - task: TerraformInstaller@0
       displayName: Install Terraform
       inputs:
