--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -23,7 +23,7 @@ stages:
       inputs:
         knownHostsEntry: 'known_hosts'
         sshPublicKey: $(SSH-Public-Key)
-        sshKeySecureFile: 'id_rsa.pub'
+        sshKeySecureFile: 'id_rsa'
     - task: Bash@3
       inputs:
         targetType: 'inline'
