Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -59,6 +59,7 @@ stages:
       inputs:
         targetType: 'inline'
         script: 'terraform output'
+        workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
 
 - stage: Build
   jobs:
