--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -63,7 +63,7 @@ stages:
     - task: Bash@3
       inputs:
         targetType: 'inline'
-        script: 'ssh -p 22 $VM_PUBLIC_IP'
+        script: 'echo $VM_PUBLIC_IP'
         workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
 
 
