Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -57,7 +57,7 @@ stages:
   
     - bash: |
         terraform output
-        export VM_PUBLIC_IP=$(terraform output publicip)
+        export VM_PUBLIC_IP=$(terraform output -raw publicip)
         echo $VM_PUBLIC_IP
         ssh $VM_PUBLIC_IP
       displayName: Check Public IP Address
