Update azure-pipelines.yaml for Azure Pipelines

--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -59,7 +59,9 @@ stages:
         terraform output
         export VM_PUBLIC_IP=$(terraform output -raw publicip)
         echo $VM_PUBLIC_IP
-        ssh daxadmin@$VM_PUBLIC_IP
+        ls
+        
+        ssh daxadmin@$VM_PUBLIC_IP -T
       displayName: Check Public IP Address
       workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
     - task: Bash@3
