--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -59,8 +59,7 @@ stages:
         terraform output
         export VM_PUBLIC_IP=$(terraform output -raw publicip)
         echo $VM_PUBLIC_IP
-        ls
-        
+        ls ~/.ssh
         ssh daxadmin@$VM_PUBLIC_IP -T
       displayName: Check Public IP Address
       workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
