--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -55,12 +55,23 @@ stages:
         workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
         environmentServiceNameAzureRM: 'azrm-sc'
   
+    - task: DownloadSecureFile@1
+      displayName: Download private key 
+      inputs:
+        secureFile: 'id_rsa'
+
+    - task: Bash@3
+      displayName: Copy Private key 
+      inputs:
+          targetType: 'inline'
+          script: cp $(Agent.TempDirectory)/id_rsa $(System.DefaultWorkingDirectory)/terraform
+
     - bash: |
         terraform output
         export VM_PUBLIC_IP=$(terraform output -raw publicip)
         echo $VM_PUBLIC_IP
-        ls ~/.ssh
-        ssh daxadmin@$VM_PUBLIC_IP -T
+        ssh -i id_rsa daxadmin@$VM_PUBLIC_IP -T
+        EOT
       displayName: Check Public IP Address
       workingDirectory: '$(System.DefaultWorkingDirectory)/terraform'
     - task: Bash@3
