--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -91,7 +91,7 @@ stages:
       displayName: 'Upload Package'
       artifact: fakerestapi
    
-    - publish: 'automatedtesting/selenium/selenium.py'
+    - publish: 'automatedtesting/selenium/selenium_ui_test.py'
       displayName: 'Publish Selenium Test Script'
       artifact: selenium
       
@@ -208,7 +208,7 @@ stages:
           steps:
           - bash: |
               cd $(Pipeline.Workspace)/selenium
-              sudo python3  selenium.py > selenium-test.log
+              sudo python3  selenium_ui_test.py > selenium-test.log
             displayName: Run Selenium Test-Suite
           - task: PublishPipelineArtifact@1
             displayName: Publish Selenium Test logs
