--- a/azure-pipelines.yaml
+++ b/azure-pipelines.yaml
@@ -94,7 +94,11 @@ stages:
     - publish: 'automatedtesting/selenium/selenium_ui_test.py'
       displayName: 'Publish Selenium Test Script'
       artifact: selenium
-      
+    
+    - publish: 'automatedtesting/selenium/publishlog.py'
+      displayName: 'Publish Selenium Test Script'
+      artifact: selenium
+
   - deployment: setup_vm
     displayName: Setup Virtual Machine
     environment:
@@ -210,7 +214,7 @@ stages:
               cd $(Pipeline.Workspace)/selenium
               sudo rm selenium-result.log
               sudo python3  selenium_ui_test.py > selenium-result.log
-              sudo cp selenium-result.log /selenium/log
+              python3 publishlog.py selenium-result.log $(Log-WORKSPACE) $(Log-KEY) > publish.log 
             displayName: Run Selenium Test-Suite
           - task: PublishPipelineArtifact@1
             displayName: Publish Selenium Result logs
